<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp">

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="#FFFFFF"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/close_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="close button"
                    android:background="@drawable/icon_close"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/manual_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/palanquin_regular"
                    android:text="@string/manual_title"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/manual_content1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/palanquin_regular"
                    android:text="@string/manual_content1"
                    android:textColor="#9C9C9C"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/manual_title" />

                <TextView
                    android:id="@+id/manual_content2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/palanquin_regular"
                    android:text="@string/manual_content2"
                    android:textColor="#9C9C9C"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/manual_content1" />

                <TextView
                    android:id="@+id/manual_content3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/palanquin_regular"
                    android:text="@string/manual_content3"
                    android:textColor="#494949"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/manual_content2" />

                <TextView
                    android:id="@+id/manual_content4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/palanquin_regular"
                    android:text="@string/manual_content4"
                    android:textColor="#494949"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/manual_content3" />

                <TextView
                    android:id="@+id/manual_content5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/palanquin_regular"
                    android:text="@string/manual_content5"
                    android:textColor="#494949"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/manual_content4" />

                <TextView
                    android:id="@+id/manual_content6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/palanquin_regular"
                    android:text="@string/manual_content6"
                    android:textColor="#494949"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/manual_content5" />

                <TextView
                    android:id="@+id/manual_content7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/palanquin_regular"
                    android:text="@string/manual_content7"
                    android:textColor="#FF0000"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/manual_content6" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
